--- a/web-server/public/about.html
+++ b/web-server/public/about.html
@@ -3,11 +3,14 @@
 <html>
 
 <head>
-
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <h1>FROM A STATIC FILE</h1> 
+    <img src="/img/tracy-morgan-stubborn.jpg" alt="">
+    <br>
+    <img src="/img/tracy-morgan-stubborn2.jpg" alt="">
     <h1>ABOUT PAGE</h1>
 </body>
 
