--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -3,12 +3,14 @@
 <html>
 
 <head>
-
+    <link rel="stylesheet" href="./css/styles.css">
+    <script src="/js/app.js"></script>
 </head>
 
 <body>
     <h1>FROM A STATIC FILE</h1> 
-    <h1>HELP PAGE</h1>
+    
+    <h1>HOME PAGE</h1>
 </body>
 
 </html>
